test/expected/declare_ati-c++20.out
declare x as atomic int
             ^
14: error: "_Atomic": unsupported keyword until C++23
